Thu Dec 30 10:16:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* breakpoint.c (breakpoint_chain): Make static.
	* breakpoint.c, breakpoint.h (frame_in_dummy): New function.
	* stack.c (print_frame_info): Use it.

Thu Dec 30 07:41:36 1993  Peter Schauer  (pes@regent.e-technik.tu-muenchen.de)

	* exec.c (add_to_section_table):  Check for SEC_ALLOC instead of
	SEC_LOAD to handle .bss segments properly.

Thu Dec 30 10:16:54 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* infrun.c (wait_for_inferior): Enable code which assumes that if
	we jump into the prologue from another function, then it was a
	subroutine call.  #if 0 AT_FUNCTION_START; the above code should
	take care of this case.

Wed Dec 29 12:32:08 1993  Jim Kingdon  (kingdon@lioth.cygnus.com)

	* valprint.c (val_print_string): Change chunksize from 200
	to 8.

	* symfile.c (generic_load): If no arguments, get file name
	from get_exec_file.

	* c-exp.y: Revert Kung's change.  "..." is not a type, and the
	change caused "p (...)0" to dump core.
	* gdbtypes.c (check_stub_method): Don't pass "..." to
	parse_and_eval_type.  This should fix the bug which Kung was
	trying to fix.

	* stabsread.c (define_symbol): If we choose not to combine
	two symbols, don't just ignore the second (LOC_REGISTER) one.
	* printcmd.c (print_frame_args): If we have a LOC_ARG and a
	LOC_REGISTER, use the LOC_ARG not the LOC_REGISTER.

Tue Dec 28 15:08:00 1993  Fred Fish  (fnf@deneb.cygnus.com)

	* solib.c (DEBUG_BASE):  Remove macro and all references.
	* solib.c (debug_base_symbols):  Add array of symbols to lookup.
	* solib.c (IGNORE_FIRST_LINK_MAP_ENTRY):  Add macro.
	* solib.c (look_for_base, locate_base):  Use debug_base_symbols.
	* solib.c (find_solib):  Use IGNORE_FIRST_LINK_MAP_ENTRY.

Tue Dec 28 12:06:57 1993  Kung Hsu  (kung@cirdan.cygnus.com)

	* c-exp.y : fix grammar to parse ellipsis (...)

Mon Dec 27 18:42:14 1993  Kung Hsu  (kung@cirdan.cygnus.com)

	* stabsread.c (read_type): fix problem when reading static member